--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
     </head>
     <body>
-        <img src="http://http://s55.radikal.ru/i150/1103/39/63effa4a2ae0.jpg>
+        <img src="http://s55.radikal.ru/i150/1103/39/63effa4a2ae0.jpg>
     
         <script>
    
