--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <title>Document</title>
     </head>
     <body>
-        <img src="https://vignette.wikia.nocookie.net/disney/images/5/56/Clone_trooper_squad.png/revision/latest?cb=20170217082503>
-    
+        <img src="ht;
         <script>
-   
+   function kuku(x) {
+       return x+12;
+   }
+       
+    kuku(3);
         </script>
 </body>
 </html>
